--- a/Swift-Basic/1.변수와 상수 /변수와 상수.md
+++ b/Swift-Basic/1.변수와 상수 /변수와 상수.md
@@ -101,3 +101,535 @@ n = 456		// 값이 변경 불가능하므로 당연히 에러 발생
 
 
 ```
+
+# Programming basic
+
+## 1) ⭐️ 프로그래밍에서 사용하는 = (등호)의 의미
+
+- **제 1원칙: 프로그래밍에서 사용하는 =(Equal)은 할당의 의미이다.(할당연산자)**
+
+> #### **=(등호)는 같다는 뜻이 아니다: = (등호)를 기준으로 오른쪽에 있는 무언가를 왼쪽에 담는다는 의미(할당)**
+
+```
+
+var a = 10
+
+a = a + 10
+
+// 프로그래밍에서 같다는 것은 == 를 사용
+
+// ==  (같다)
+
+// !=  (같지 않다)
+
+```
+
+## 2) 대문자와 소문자의 엄격한 구분
+
+- 대부분의 첫글자는 소문자로 시작한다.(예외적으로 대문자 사용)
+
+```
+var myName = "홍길동"
+
+var gridPoint: (Int, Int) = (2, 12)
+
+func helloString() {
+
+    print("안녕하세요.")
+    print("Hello")
+    print("곤니찌와")
+
+// 중간에는 대문자/숫자가 쓰일 수 있다. 다만, 시작은 소문자
+
+}
+
+```
+
+## 3) 키워드(Keyword)
+
+> **약속어(스위프트에서 특별한 의미로 사용하겠다고 미리 정해 놓은 단어)**
+
+- 약 70여개의 키워드 존재
+
+- [참고](https://www.tutorialkart.com/swift-tutorial/swift-keywords/)
+
+- 키워드는 다른 의미로 사용 불가능
+
+- var, func, if....
+
+## 4) 주석(Comment)
+
+> **컴퓨터가 코드를 읽지 않아도 된다고(무시해도 된다고)알려주는 부분**
+
+- 주석은 프로그램소스코드에 정보를 남기는 목적으로 사용합니다. 주로 코드를 다시봤을때 필요한 중요메모나 다른 개발자에게 설명하기 위한 메모등을 주석으로 남깁니다.
+
+- Swift에서의 한줄주석은 슬래시(/)두개를 사용하여 나타내고,두줄 주석은 슬래시와 별표를 사용하여 나타냅니다.
+
+```
+
+print("Hello, Swift!")
+
+// print("Hello, Swift!")
+
+// 단축키 command + /
+
+// 여기는 주석을 표시하고 있습니다.
+
+/*
+
+ print("Hello, Swift!")
+
+ print("Hello, world!")
+
+ */
+
+// /*를 누르고 엔터를 누르면 자동완성으로 여러줄 주석 문단이 생성된다.
+
+
+```
+
+## 5) 세미 콜론(;) 규칙 (Semicolon)
+
+- 스위프트에서느 각 라인의 마지막에 붙는 세미콜론은 선택사항
+
+```
+
+var myFirstLanguage: String = "Swift"
+
+print("Hello, Swift")
+
+print("안녕"); print("드디어"); print("스위프트 공부를 시작한다.");
+print("");
+print("");
+print("");
+
+
+```
+
+- 대부분의 프로그래밍 언어는 세미콜론 필수
+
+- 하나의 라인에 여러가지 명령문을 사용하고 싶을 경우에는 필수
+
+## 6) 줄 맞추기
+
+- 일반적으로 중괄호 안에서 들여쓰기(Indentation)를 통해 코드의 가독성을 높임
+
+> #### **들여쓰기는 코드의 가독성을 높이기 위한 프로그래머들간의 약속**
+
+```
+// 4칸 들여쓰기는 기본 설정
+
+if true {
+
+    print("안녕하세요")
+}
+
+
+```
+
+## 7) Print
+
+> #### **모든 첫 프로그래밍의 시작은 출력부터 시작**
+
+- 출력을 위한 함수
+
+- 스위프트에서는 프린트구문에 쌍따옴표("")를 꼭 붙여야 한다.
+
+- 숫자는 쌍따옴표를 붙여도 되고 안붙여도 된다. 문자열은 꼭 붙여야 한다.
+
+```
+
+
+print("Hello, World")
+
+print("hello swift")
+
+print("안녕하세요")
+
+print(5)
+
+print("5")
+
+print(3 + 4)
+
+print(3.14)
+
+```
+
+# 참고) 프로그래밍 관련 용어 정리
+
+## 1) 키워드(Keyword)
+
+- 약속어 (스위프트에서 특별한 의미로 사용하겠다고 미리 정해놓은 단어)
+
+```
+
+// var
+
+// if
+
+// func
+
+// class
+
+// static
+
+
+
+```
+
+## 2) 리터럴(Literals)
+
+- 코드에서 고정된 값으로 표현되는 문자 (데이터) 그 자체(Int / Double / String / Character / Bool 리터럴 등)
+
+```
+
+var a = 4
+
+// "오른쪽에는 정수 4를 넣었다."라고 할 수도 있지만, "오른쪽에는 할당하기 위해 <정수 리터럴>값인 정수4를 넣었다."
+
+var b: Int = 8
+
+
+var name = "홍길동"      // "문자열 리터럴" 값을 넣어야해.
+
+var double = 3.14      //  "더블 리터럴" 값 3.14
+
+
+"안녕"
+
+4.5
+
+```
+
+## 3) 식별자(Identifier)
+
+- 변수, 상수, 함수, 사용자 정의 타입의 이름
+
+```
+
+var player1 = "니코 윌리암스"   // 식별자: player1
+
+
+var player2 = "흐비차"        // 식별자: player2
+
+
+enum Weekdays { // 열거형(사용자 정의 타입)이므로 대문자로 시작
+
+    case monday
+
+    case tuesday
+
+    case wednesday
+
+    case thursday
+
+    case friday
+
+    case saturday
+
+    case sunday
+
+}
+
+func plusFunction(a: Int, b: Int) -> Int {
+
+    var c = a + b
+
+    return c
+}
+
+
+
+```
+
+## 4) 토큰(Token)
+
+- 코드의 가장 작은 단위: 코드에서 더이상 쪼갤 수 없는 최소의 단위 (식별자, 키워드, 구두점, 연산자, 리터럴)
+
+```
+
+// var
+
+// !=
+
+// 123
+
+// 토큰은 사이에 빈칸을 추가해선 안됨. (다만, 빈칸을 없애는 것은 때때로 괜찮음)
+
+// 프로그래밍에서는 줄바꿈/탭도 빈칸(공백)으로 인식함.
+
+// 즉, 빈칸이 여러개 띄어있어도 컴퓨터가 인식하기에는 1개의 빈칸으로 봄
+
+// var aaa = 5
+
+```
+
+## 5) 표현식(Expression)
+
+- 값, 변수, 연산자의 조합으로 하나의 결과값으로 평가되는 코드 단위
+
+```
+// 하나의 값이 나오는 코드
+
+var n = 5   //       ====> 문 장 (할당하는 작업)
+
+17          // 17    ====> 표현식
+
+n           // 5     ====> 표현식
+
+n + 7       // 12    ====> 표현식
+
+n < 5      // false  ====> 표현식
+
+
+
+```
+
+## 6) 문장(Statement)
+
+- 문장 또는 구문: 특정작업을 실행하는 코드 단위
+
+```
+var n2 = 3    // ====> 문장
+
+print(n)      // ====> 문장
+
+print("안녕")  // ====> 문장
+
+
+
+// 토큰(키워드) + 표현식(값) ====> 문장(작업을 명령)
+
+
+
+```
+
+## 7) 경고와 오류
+
+[경고와 오류](https://github.com/ios-Jay/TIL/blob/main/img/%EA%B2%BD%EA%B3%A0%EC%99%80%20%EC%98%A4%EB%A5%98.png)
+
+# 스위프트의 데이터 타입
+
+## 1) 데이터 타입(Data Types)의 이해
+
+- 타입이 왜 필요할까?
+
+> **데이터를 얼마 만큼의 크기, 그리고 어떤 형태로 저장할 것인가에 대한 약속이 필요**
+
+```
+
+var i: Int = 32
+
+var j: Int = 23
+
+i = 3.2     // 소수점 타입 할당이 안됨
+
+var k = i = j
+
+print(k)
+
+
+
+```
+
+> **타입은 메모리 공간의 크기와 연관이 있다.**
+
+### 스위프트(Swift)의 데이터 타입: 스위프트는 모든 타입의 첫글자에 대문자를 사용
+
+##### 1. Int:정수(Integer)
+
+Int : -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5 ...
+
+##### 2. Float:실수(부동소수점) 6자리 소수점
+
+- 소수점 표현 가능(6자리 까지의 정보를 정확하게 저장) / 4바이트
+
+- 소수점 아래 6자리가 아닌 전체(정수/소수점 포함) 6자리 (6자리를 벗어나면 반올림의 가능성이 있으므로 주의)
+
+##### 3. Double(부동 소수점) 15자리 소수점(Swift에서 주로 사용)
+
+- 실수 타입(Float 타입에 비해 2배의 공간)
+
+- 소수점 표현 가능(15자리까지의 정보를 정확하게 저장) / 8바이트
+
+- 소수점 아래 15자리가 아닌 전체(정수/소수점 포함) 15자리 (15자리를 벗어나면 반올림의 가능성이 있으므로 주의)
+
+(1). 두 타입은 정밀도에서 차이가 많이 난다.
+
+(2) (지수와 가수를 나눠서) 복잡한 알고리즘으로 저장한다.
+
+Double : -3.141592, -2.20958, 1.5418...
+
+##### 4. Character:문자(글자 한개)
+
+Character : "a", "b", "c", "1", " "(공백문자)
+
+##### 5. String: 문자열
+
+String: "안녕하세요.", "Hello", ""(빈 문자열)
+
+- 문자 / 문자열은 반드시 쌍따옴표("") 안에 써야함을 주의
+
+##### 6. Bool: 참과 거짓
+
+- true 또는 false를 저장
+
+- 참(true) / 거짓(false) -> 프로그래밍에서 정말 다양한 상황에서 쓰임
+
+Bool: true, false
+
+```
+var b: Int = 7
+
+var c: Double = 3
+
+print(b)        // 정수 7(Int형)
+
+print(c)        // 정수 3이 아닌 실수형으로 표현 되는 3.0
+
+
+let chr: Character = "1"
+
+type(of: chr)           // 타입을 확인하는 방법
+
+// let chr2: Character = "aa"   // 당연히 에러 발생. 글자 하나이므로
+
+
+let chr3: Character = " "      // 빈문자는 에러발생 그러나 공백문자는 가능
+
+
+let str: String = ""   // 빈문자열 저장가능
+
+
+let str1: String = "안녕하세요"
+
+
+```
+
+## 2) 타입 주석(Type Annotation)
+
+- 변수를 선언하면서, 타입도 명확하게 지정하는 방식
+
+```
+
+var number: Int   //  1) 변수를 선언(타입 선언:메모리 공간을 먼저 생성)
+
+number = 10       //  2) 값을 저장(초기화:데이터를 저장)
+
+print(number)     //  3) 값을 읽기
+
+
+```
+
+> ##### 자료형을 명확하게 지정
+
+```
+
+var a1: Int = 3
+
+var b1: Int = 4
+
+```
+
+> ##### 타입 선언과 초기화
+
+```
+var value: Double = 5.345
+
+value = 12.3    // 값 바꾸기
+
+
+var value2 = value
+
+```
+
+## 3) 타입 추론(Type Inference)
+
+- 타입을 지정하지 않아도, 컴파일러가 타입을 유추해서(알아서 알맞은 타입으로 저장하는) 방식
+
+> ##### 값을 보고, 어떤 타입인지를 컴파일러가 추론해서 사용함
+
+```
+var name = "홍길동"
+
+type(of: name)
+
+
+
+var num1 = 2
+
+var num2 = 1.2
+
+var num3: String = "Hello"
+
+var num4 = true
+
+
+type(of: num1)
+
+
+```
+
+## 4) 타입 안정성(Type Safety)
+
+- 스위프트는 데이터 타입을 명확하게 구분하여 사용하는 언어
+
+> ##### **스위프트는 다른 타입끼리 계산할 수 없다.**
+
+```
+let num5 = 10
+
+// let num6: Double = num5   // 호환되지 않음(메모리 공간의 크기가 다름)
+
+
+
+let d = 123
+
+let e = 3.141592
+
+// let result = d + e   //정상적인 계산 불가능
+
+
+
+
+
+//  소수 + 정수를 더 할 수 없다.
+
+// "안녕" + 5 를 더할 수 없다.
+
+
+```
+
+## 5) 타입(형) 변환(Type Conversion)
+
+- 타입을 변환해서 사용할 수 있는 방법은 있다.
+
+> ##### 기존에 메모리에 저장된 값을 다른 형식으로 바꿔서, 새로운 값을 생성해서 다른 메모리 공간에 다시 저장
+
+```
+
+let str2 = "123456"     // String타입
+
+let number1 = Int(str2)     //Int(정수)형으로 변환
+
+print(number1)
+
+let str3 = "123.456"
+
+let number2 = Int(str3)
+
+// 타입컨버전이 실패했을 때 ====> nil(값이 없음)이 리턴될 수 있다.
+
+print(number2)
+
+let n = 7
+
+let n2 = Double(n)
+
+print(n2)
+
+
+```
+
+> ### **결국 데이터를 메모리라는 공간에 어떤 크기 / 어떤 형태로 저장할 것인지에 관한 문제**
